Remove overflow hidden to avoid glitches in Firefox

--- a/src/components/logo/logo-styles.scss
+++ b/src/components/logo/logo-styles.scss
@@ -7,7 +7,6 @@
     margin-top: 3rem;
     perspective: 800px;
     transform-style: preserve-3d;
-    overflow: hidden;
     z-index: 10;
 
     @include phone {
